--- a/earn.html
+++ b/earn.html
@@ -89,11 +89,11 @@
 
                 <!-- Main -->
                 <main id="main" class="col-md-9">
-                    <h1 class="title">How to make BTC by having YouTube channel?</h1>
+                    <h1 class="title">Make BTC by having a YouTube channel</h1>
                     <div class="faqRow">
                         <h2>Meet <a href="https://lbry.tv/$/invite/@wolfhfnet:3" target="_blank">LBRY.TV</a> </h2>
                         <p>For most users, LBRY will be a place where they can find great videos, music, ebooks, and more: imagine a vast digital library that is available on all of your devices. But under the hood, LBRY is many components working together. </br>
-                        <a href="https://lbry.tv/$/invite/@wolfhfnet:3" target="_blank">LBRY.TV</a> is a YouTube alternative, where you earn LBRY you'll later on exchange to BitCoins.
+                        <a href="https://lbry.tv/$/invite/@wolfhfnet:3" target="_blank">LBRY.TV</a> is a YouTube alternative, where you earn LBRY tokens, you'll later on exchange to BitCoins.
                         </p>
                     </div>
 
@@ -105,7 +105,7 @@
 
                     <div class="faqRow">
                         <h3>Get lot of LBRY for no work whatsoever</h3>
-                        <p><a href="https://lbry.tv/$/invite/@wolfhfnet:3" target="_blank">LBRY.TV</a> has  <a href="https://lbry.com/youtube" target="_blank">YouTube sync program</a> where you earn 1080 LBRY for having at least 1000 subscribers. They have set milestones at 1000, 10000, 50000, 100k, 500k, 1million subscribers, with each milestone earning you more and more LBRY. 
+                        <p>Now the good stuff. This will potentially make you a lot of money. <a href="https://lbry.tv/$/invite/@wolfhfnet:3" target="_blank">LBRY.TV</a> has  <a href="https://lbry.com/youtube" target="_blank">YouTube sync program</a> where you earn 1080 LBRY for having at least 1000 subscribers. They have set milestones at 1000, 10000, 50000, 100k, 500k, 1million subscribers, with each milestone earning you more and more LBRY. 
                         </p>
                     </div>
 
