earn.html changes

--- a/earn.html
+++ b/earn.html
@@ -98,13 +98,13 @@
                     </div>
 
                     <div class="faqRow">
-                        <h3>How do I earn tokens?</h3>
+                        <h3>Earn even if you are not a publisher!</h3>
                         <p>First and foremost, you earn tokens by having making an account here <a href="https://lbry.tv/$/invite/@wolfhfnet:3" target="_blank">LBRY.TV</a>, then going to their rewards page and completing various tasks under <a href="https://lbry.tv/$/rewards" target="_blank">rewards section</a> and inviting friends via <a href="https://lbry.tv/$/invites" target="_blank">invites section</a>.
                         </p>
                     </div>
 
                     <div class="faqRow">
-                        <h3>Get lot of LBRY for no work whatsoever</h3>
+                        <h3>Get lot of LBRY for no work whatsoever!</h3>
                         <p>Now the good stuff. This will potentially make you a lot of money. <a href="https://lbry.tv/$/invite/@wolfhfnet:3" target="_blank">LBRY.TV</a> has  <a href="https://lbry.com/youtube" target="_blank">YouTube sync program</a> where you earn 1080 LBRY for having at least 1000 subscribers. They have set milestones at 1000, 10000, 50000, 100k, 500k, 1million subscribers, with each milestone earning you more and more LBRY. 
                         </p>
                     </div>
