--- a/earn.html
+++ b/earn.html
@@ -93,7 +93,7 @@
                     <div class="faqRow">
                         <h2>Meet <a href="https://lbry.tv/$/invite/@wolfhfnet:3" target="_blank">LBRY.TV</a> </h2>
                         <p>For most users, LBRY will be a place where they can find great videos, music, ebooks, and more: imagine a vast digital library that is available on all of your devices. But under the hood, LBRY is many components working together. </br>
-                        <a href="https://lbry.tv/$/invite/@wolfhfnet:3" target="_blank">LBRY.TV</a> is a YouTube alternative, where you earn LBRY tokens, you'll later on exchange to BitCoins.
+                        <a href="https://lbry.tv/$/invite/@wolfhfnet:3" target="_blank">LBRY.TV</a> is a YouTube alternative, where you earn LBRY tokens, you'll later on exchange to BitCoin.
                         </p>
                     </div>
 
