--- a/earn.html
+++ b/earn.html
@@ -40,7 +40,7 @@
                     
                     <div class="navbar-brand">
                         <a href="/">
-                            <p class="logo"> VUK.DIGITAL</p>
+                            <img class="logo" src="./static/img/logo.png" alt="logo">
                             <img class="logo-alt" src="./static/img/logo_transparent.png" alt="logo">
                         </a>
                     </div>
