--- a/earn.html
+++ b/earn.html
@@ -99,7 +99,7 @@
 
                     <div class="faqRow">
                         <h3>Earn even if you are not a publisher!</h3>
-                        <p>First and foremost, you earn tokens by having making an account here <a href="https://lbry.tv/$/invite/@wolfhfnet:3" target="_blank">LBRY.TV</a>, then going to their rewards page and completing various tasks under <a href="https://lbry.tv/$/rewards" target="_blank">rewards section</a> and inviting friends via <a href="https://lbry.tv/$/invites" target="_blank">invites section</a>.
+                        <p>First and foremost, you earn tokens by having making an account at <a href="https://lbry.tv/$/invite/@wolfhfnet:3" target="_blank">LBRY.TV</a>, then going to their rewards page and completing various tasks under <a href="https://lbry.tv/$/rewards" target="_blank">rewards section</a> and inviting friends via <a href="https://lbry.tv/$/invites" target="_blank">invites section</a>.
                         </p>
                     </div>
 
