--- a/earn.html
+++ b/earn.html
@@ -114,6 +114,12 @@
                         <p>Head over to <a href="https://global.bittrex.com/" target="_blank">Bittrex</a> and get your LBRY tokens exchanged to BTC. At that point, you literally have cash in your hands and you'll be getting more on a monthly basis! That's it, enjoy!
                         </p>
                     </div>
+                     <div class="faqRow">
+                        <h3>Share this article for extra LBC!</h3>
+                        <p>Share the article link on your Facebook page or Instagram profile and email me at: <strong>wolfhfnet@gmail.com</strong> with the proof of sharing  and your LBRY wallet address :) I'll send some lbc your way.
+                        </br><strong>Thank you for reading! Happy earning! </strong>
+                        </p>
+                    </div>
 
                    
 
