--- a/earn.html
+++ b/earn.html
@@ -116,7 +116,7 @@
                     </div>
                      <div class="faqRow">
                         <h3>Share this article for extra LBC!</h3>
-                        <p>Share the article link on your Facebook page or Instagram profile and email me at: <strong>wolfhfnet@gmail.com</strong> with the proof of sharing  and your LBRY wallet address :) I'll send some lbc your way.
+                        <p>Share the article link on your Facebook page or Instagram profile and email me at: <strong>wolfhfnet@gmail.com</strong> or drop me a message at <a href="https://t.me/wolfdev97" target="_blank">Telegram</a> with the proof of sharing  and your LBRY wallet address :) I'll send some lbc your way.
                         </br><strong>Thank you for reading! Happy earning! </strong>
                         </p>
                     </div>
