--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <meta property="og:description"        content="Make money with me! Crypto currency money making guides." />
     <meta property="og:image"              content="./static/img/facebook_profile_image.png" />
     <meta name="google-site-verification" content="sCeGF_pzkrjcFtV3m7noxEUlEv2FHZV6CysbD_tQZeM" />
+    <script data-ad-client="ca-pub-2660909995690927" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 
 <body>
