--- a/earn.html
+++ b/earn.html
@@ -17,7 +17,7 @@
     <link type="text/css" rel="stylesheet" href="./static/css/style.css?v=1.0.6" />
     <meta property="og:url"                content="https://www.vuk.digital/" />
     <meta property="og:type"               content="article" />
-    <meta property="og:title"              content="VUK.DIGITAL - Make BTC with YouTube channel" />
+    <meta property="og:title"              content="VUK.DIGITAL - Earn BTC by having a YouTube channel with LBRY.TV" />
     <meta property="og:description"        content="Earn BitCoins by having a YouTube channel with LBRY.TV" />
     <meta property="og:image"              content="./static/img/facebook_profile_image.png" />
    
@@ -89,7 +89,7 @@
 
                 <!-- Main -->
                 <main id="main" class="col-md-9">
-                    <h1 class="title">Make BTC by having a YouTube channel</h1>
+                    <h1 class="title">Earn BTC by having a YouTube channel with LBRY.TV</h1>
                     <div class="faqRow">
                         <h2>Meet <a href="https://lbry.tv/$/invite/@wolfhfnet:3" target="_blank">LBRY.TV</a> </h2>
                         <p>For most users, LBRY will be a place where they can find great videos, music, ebooks, and more: imagine a vast digital library that is available on all of your devices. But under the hood, LBRY is many components working together. </br>
